cmake_minimum_required(VERSION 3.0)
project(sample1 CXX)
add_executable(sample1 sample1.cpp)
project(sample2 CXX)
add_executable(sample2 sample2.cpp)
project(sample3 CXX)
add_executable(sample3 sample3.cpp)
project(sample4 CXX)
add_executable(sample4 sample4.cpp)
project(sample5 CXX)
add_executable(sample5 sample5.cpp)
project(sample6 CXX)
add_executable(sample6 sample6.cpp)
project(sample7 CXX)
add_executable(sample7 sample7.cpp)
project(sample8 CXX)
add_executable(sample8 sample8.cpp)
project(sample9 CXX)
add_executable(sample9 sample9.cpp)
project(sample10 CXX)
add_executable(sample10 sample10.cpp)


set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_COMPILR /usr/bin/g++)
set(CMAKE_CXX_FLAGS "-std=c++14 -pedantic -Wall -Wextra -Wformat=2 -Wcast-qual -Wwrite-strings -Wfloat-equal -Wpointer-arith -Winit-self -Wredundant-decls")
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -march=native")


